# league-draft-analyzer

./: .gitignore  LICENSE  README.md  TODO.md  driver.py  predict_custom.py  predict_gui.py  pyproject.toml
data/: champ_mapping.yml  games_10000_14999.json  games_15000_19999.json  games_20000_24999.json  games_25000_29999.json  games_30000_34999.json  games_35000_39999.json  games_40000_44999.json  games_45000_49999.json  games_50000_54999.json  games_5000_9999.json  games_55000_60000.json  games_60000_65000.json  games_65001_70000.json  games_70001_72879.json  lda_net.pth  lda_net_56.pth  lda_net_62_56_noban.pth  lda_net_66_54.pth  lda_net_67_64.pth  lda_net_68.pth  lda_net_70_55.pth  lda_net_71_62.pth
source/: LDAClass.py  LDADataset.py  LDANet.py  Normalizer.py  compute_synergy.py  constants.py  join_json.py  main.py  parse_game_data.py  test_data.py  train.py
