[tool.poetry]
name = "league-draft-analyzer"
version = "0.1.0"
description = "Deep learning model to predict outcome of a league game given a draft"
authors = ["lipeeeee <filipe.pereirafga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
